overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /staging
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
